Use Datagen to Generate Piglin Bartering Recipe